--- a/libs/select2/select2.css
+++ b/libs/select2/select2.css
@@ -1,6 +1,6 @@
 .select2-container {
   margin: 0;
-  width: 100% !important;
+  width: fit-content;
   display: inline-block;
   position: relative;
   vertical-align: middle;
